fixed container alignment

--- a/main.css
+++ b/main.css
@@ -4,3 +4,8 @@ body {
 	font-family: sans-serif;
 	font: helvetica;
 }
+
+.container {
+	width: 50%;
+	margin-left: 25%;
+}
